--- a/src/main/resources/templates/bibliotecaPersonal.html
+++ b/src/main/resources/templates/bibliotecaPersonal.html
@@ -7,20 +7,41 @@
     <title>Biblioteca personal</title>
 </head>
 
-<body>
+<body class="darkmode">
 <header th:replace="~{fragmentos::barra-nav}"></header>
     <main>
-        <div class="contendor_novel">
-            <h2>Novelas</h2>
-            <div class="imagenes" th:each="novela  : ${novelas}">
-                <div>
-                    <a th:href="@{/novela/{nombre}(nombre=${novela.titulo})}">
-                        <img th:src="${novela.imagen}" src="" width="450px"/>
-                        <span th:text="${novela.titulo}"></span>
-                    </a>
+        <main>
+            <div id="content">
+                <div class="wrapper">
+                    <div class="postbody">
+                        <div class="bixbox">
+                            <div class="releases latesthome">
+                                <h3>Recomendadas</h3>
+                            </div>
+                            <div class="listupd">
+                                <div class="excstf"  th:each="novela : ${novelas}">
+                                    <div class="utao styletree">
+                                        <div class="uta">
+                                            <div class="imgu">
+                                                <a th:href="@{/novela/{nombre}(nombre=${novela.titulo})}">
+                                                    <img data-lazyloaded="1" th:src="${novela.imagen}" class="ts-post-image wp-post-image attachment-medium size-medium entered litespeed-loaded" loading="lazy" itemprop="image" width="120" height="170" data-ll-status="loaded">
+                                                </a>
+                                            </div>
+                                            <div class="luf">
+                                                <a class="series" th:href="@{/novela/{nombre}(nombre=${novela.titulo})}">
+                                                    <h3 th:text="${novela.titulo}"></h3>
+                                                </a>
+                                                <span th:text="${novela.sinopsis}"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </main>
     </main>
 <footer th:replace="~{fragmentos::footer}"></footer>
 </body>
