--- a/src/main/resources/templates/fragmentos.html
+++ b/src/main/resources/templates/fragmentos.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <title th:replace="${titulo}">Tu pequeña biblioteca</title>
+    <link rel="icon" href="../img/logo.png" type="image/x-icon">
     <link th:href="@{/css/general.css}" rel="stylesheet">
     <link th:href="@{/img/}">
     <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" th:href="@{/css/login.css}">
+    <link rel="stylesheet" th:href="@{/css/darkmode.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -29,8 +32,8 @@
 </head>
 <body>
 <header th:fragment="barra-nav">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#" th:href="@{/}"> <img th:src="@{../img/logo.png}" alt="imagen de novela"></a>
+    <nav class="nav_color navbar navbar-expand-lg">
+        <a class="navbar-brand" href="#" th:href="@{/}"> <img th:src="@{../img/logo.png}" alt="imagen de novela" width="150px"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -46,27 +49,28 @@
                 </li>
                 <li sec:authorize="!isAuthenticated()" class="nav-item">
                     <a class="nav-link" href="#" th:href="@{/login}">
-                        <span th:text="#{header.inisesión}">Iniciar Sesión</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#" th:href="@{/busqueda}">
-                        </i><span>Novelas</span></a>
+                        <span> Iniciar Sesión</span></a>
                 </li>
                 <li sec:authorize="!isAuthenticated()" class="nav-item">
                     <a class="nav-link" href="#" th:href="@{/user/new}">
-                        <span th:text="#{header.regis}">Registrarse</span></a>
+                        <span>Registrarse</span></a>
                 </li>
-
-                <li sec:authorize="isAuthenticated()" class="nav-item">
-                    <form th:action="@{/logout}" method="post" id="logoutForm"></form>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" th:href="@{/busqueda}">
+                        <span>Novelas</span></a>
+                </li>
+                <li>
+                    <a sec:authorize="isAuthenticated()" class="nav-item" href="javascript:document.getElementById('logoutForm').submit()">
+                    <i class="fas fa-sign-out-alt"></i> Salir</a>
                 </li>
             </ul>
+            <form th:action="@{/logout}" method="post" id="logoutForm"></form>
         </div>
     </nav>
 </header>
 
 
-<footer class="text-center text-lg-start text-white bg-dark" th:fragment="footer">
+<footer class="nav_color text-center text-lg-start text-white" th:fragment="footer">
     <div class="container p-2 pb-0">
         <section class="">
             <div class="row">
