--- a/src/main/resources/templates/usuarios/registro.html
+++ b/src/main/resources/templates/usuarios/registro.html
@@ -1,39 +1,87 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="~{fragmentos::encabezado(~{::title}, ~{})}">
 
   <title>Register</title>
 </head>
-<body>
-<div class="card">
-  <div class="card-body pt-3">
-    <form method="post" action="#" id="form-usuario" enctype="multipart/form-data"
-          th:action="@{/user/new/signup}"
-          th:object="${usuarioForm}">
-      <h4 class="mb-3">Nuevo usuario</h4>
-      <div class="form-group row">
-        <div class="col-sm-10 bloquetext">
-          <label for="nombre" class="form-label">Nombre</label>
-          <input type="text" class="form-control" id="nombre" placeholder="Nombre" th:field="*{username}" />
+<body class="darkmode">
+<header th:replace="~{fragmentos::barra-nav}"></header>
+<main>
+  <div id="content">
+    <div sec:authorize="!isAuthenticated()" class="wrapper">
+      <div class="postbody">
+        <div class="bixbox">
+          <div class="releases">
+            <h1>Acceso</h1>
+          </div>
+          <div class="page">
+            <div class="um" style="opacity: 1;">
+              <div class="um-form">
+                <form method="post" action="#" id="form-usuario" enctype="multipart/form-data"
+                      th:action="@{/user/new/signup}"
+                      th:object="${usuarioForm}">
+                  <h4 class="mb-3">Nuevo usuario</h4>
+                  <div class="form-group row">
+                    <div class="col-sm-10 bloquetext">
+                      <label for="nombre" class="form-label">Nombre</label>
+                      <input type="text" class="form-control" id="nombre" placeholder="Nombre" th:field="*{username}" />
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <div class="col-sm-10 bloquetext">
+                      <label for="email" class="form-label">Correo electronico</label>
+                      <input type="email" class="form-control" id="email" placeholder="Correo electronico" th:field="*{email}" />
+                    </div>
+                  </div>
+                  <div class="form-group row">
+                    <div class="col-sm-10 bloquetext">
+                      <label for="password_register" class="form-label">Contraseña</label>
+                      <input type="password" class="form-control" id="password_register" placeholder="password" th:field="*{password}" />
+                    </div>
+                  </div>
+                  <div class="col-sm-10">
+                    <button type="submit" class="btn btn-primary">Register</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-      <div class="form-group row">
-        <div class="col-sm-10 bloquetext">
-          <label for="email" class="form-label">Correo electronico</label>
-          <input type="email" class="form-control" id="email" placeholder="Correo electronico" th:field="*{email}" />
-        </div>
-      </div>
-      <div class="form-group row">
-        <div class="col-sm-10 bloquetext">
-          <label for="password_register" class="form-label">Contraseña</label>
-          <input type="password" class="form-control" id="password_register" placeholder="password" th:field="*{password}" />
-        </div>
-      </div>
-      <div class="col-sm-10">
-        <button type="submit" class="btn btn-primary">Register</button>
-      </div>
-    </form>
+    </div>
   </div>
-</div>
+</main>
+
+<!--<div class="card">-->
+<!--  <div class="card-body pt-3">-->
+<!--    <form method="post" action="#" id="form-usuario" enctype="multipart/form-data"-->
+<!--          th:action="@{/user/new/signup}"-->
+<!--          th:object="${usuarioForm}">-->
+<!--      <h4 class="mb-3">Nuevo usuario</h4>-->
+<!--      <div class="form-group row">-->
+<!--        <div class="col-sm-10 bloquetext">-->
+<!--          <label for="nombre" class="form-label">Nombre</label>-->
+<!--          <input type="text" class="form-control" id="nombre" placeholder="Nombre" th:field="*{username}" />-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="form-group row">-->
+<!--        <div class="col-sm-10 bloquetext">-->
+<!--          <label for="email" class="form-label">Correo electronico</label>-->
+<!--          <input type="email" class="form-control" id="email" placeholder="Correo electronico" th:field="*{email}" />-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="form-group row">-->
+<!--        <div class="col-sm-10 bloquetext">-->
+<!--          <label for="password_register" class="form-label">Contraseña</label>-->
+<!--          <input type="password" class="form-control" id="password_register" placeholder="password" th:field="*{password}" />-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col-sm-10">-->
+<!--        <button type="submit" class="btn btn-primary">Register</button>-->
+<!--      </div>-->
+<!--    </form>-->
+<!--  </div>-->
+<!--</div>-->
 </body>
 </html>
